--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -7,18 +7,15 @@
 
     <ToggleButton
         android:id="@+id/togle"
-        android:background="@drawable/toggle"
-        android:fontFamily="@font/font"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/white"
-        android:textOn="카카오 모드"
-        android:textOff="네이버 모드" />
+        android:background="@drawable/toggle"
+        android:fontFamily="@font/font"
+        android:textOff=""
+        android:textOn="" />
 
     <TextView
         android:id="@+id/title"
@@ -35,15 +32,12 @@
 
     <Button
         android:id="@+id/logoutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/logout_button"
+        android:background="@drawable/logout"
         android:fontFamily="@font/font"
-        android:text="로그아웃" />
+        android:text="" />
 
 </RelativeLayout>
